dealing with forms,team mockapi updates

--- a/src/components/leftNav/leftNav.scss
+++ b/src/components/leftNav/leftNav.scss
@@ -44,9 +44,12 @@
         height: 15px;
         width: 15px;
       }
-      
-
-      
+      .c-active {
+        border-color: #99b3ff;
+      }
+      .c-passive {
+        border-color: #c6f221;
+      }
     }
   }
 }
