--- a/src/components/addForm/addForm.scss
+++ b/src/components/addForm/addForm.scss
@@ -4,6 +4,7 @@
   justify-content: baseline;
   outline: none;
   border: none;
+  width: 100%;
   .add-inpt {
   
     background-color: #f1f1f1;
@@ -11,7 +12,7 @@
     margin-left: 30px;
  
     height: 40px;
-    width: 400px;
+    width: 40%;
     font-size: 15px;
     border-radius: 10px;
     padding-left: 10px;
