--- a/src/components/leftNav/leftNav.scss
+++ b/src/components/leftNav/leftNav.scss
@@ -1,7 +1,7 @@
 .nav-container {
   background-color: #f1f1f1;
-  width: 26%;
-  height: 100vw;
+  min-width: 26%;
+  min-height: 100vh;
   padding: 3% 0 0 3%;
   .head {
     display: flex;
@@ -15,8 +15,8 @@
       cursor: pointer;
       box-shadow: 10px 10px 20px 0px #1a1a3230;
 
-      width: 40px;
-      height: 40px;
+      min-width: 40px;
+      min-height: 40px;
       background-color: white;
       border-radius: 100%;
       margin-left: auto;
