--- a/src/pages/employePage/employePage.scss
+++ b/src/pages/employePage/employePage.scss
@@ -7,7 +7,7 @@
     box-shadow: 2px 2px 3px 0px rgba(26, 26, 50, 0.1);
     border-radius: 20px;
     height: 15px;
-    width: 10%;
+    width: 100px;
     text-align: center;
     line-height: 15px;
     .triangle {
