--- a/src/pages/employePage/employePage.scss
+++ b/src/pages/employePage/employePage.scss
@@ -10,8 +10,12 @@
     width: 100px;
     text-align: center;
     line-height: 15px;
+    transition: all 0.5s;
     .triangle {
       transform: rotate(-90deg);
+    }
+    &:hover{
+      background-color: #f1f1f1;
     }
   }
   .teams-text {
@@ -23,14 +27,13 @@
   display: flex;
   width: 100%;
   .employee-image {
+    margin-bottom: 20px;
     width: 120px;
     height: 120px;
     background-color: rgba(235, 192, 80, 1);
     border-radius: 100px;
   }
   .employee-left {
-    margin-left: 40px;
-    width: 70%;
     .employee-filds {
       width: 100%;
       max-height: 100%;
@@ -58,27 +61,9 @@
   border-radius: 30px;
   line-height: 40px;
   padding-left: 25px;
-  font-size: 18px;
+  
   font-weight: 900;
   margin-top: 22px;
-}
-
-.form-vrap {
-  display: flex;
-  margin: 15px;
-  align-items: center;
-  .fomrName {
-    font-weight: 900;
-  }
-  input {
-    box-shadow: 4px 0px 7px 3px rgb(26 26 50 / 12%);
-    height: 30px;
-    width: 60%;
-    margin-left: 10px;
-    border-radius: 30px;
-    padding-left: 10px;
-    font-size: 13px;
-  }
 }
 
 .employee-submit {
@@ -93,18 +78,22 @@
   height: 20px;
   line-height: 20px;
   margin-left: 15px;
+  transition: all 1s;
+  &:hover{
+    background: rgb(137, 169, 23);
+  }
 }
 
 .employee-works-info-container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  
   grid-template-rows: 200px;
   grid-gap: 2px;
 
   box-shadow: 10px 10px 20px 0px rgba(26, 26, 50, 0.07);
   border-radius: 30px;
   margin-top: 30px;
-  
+
   .info-wrap {
     height: 100%;
     background: rgba(241, 241, 241, 1);
@@ -117,22 +106,21 @@
       border-radius: 0 30px 30px 0;
     }
   }
-  font-size: 15px;
+
   font-weight: 900;
-  .head-wrap{
-     display: flex;
-     align-items: center;  
-     justify-content: center;
+  .head-wrap {
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   .head {
-    
     height: 15%;
     line-height: 30px;
   }
   .span-dots {
-     cursor: pointer;
+    cursor: pointer;
     padding-bottom: 7.5px;
-    padding-left: 10px;
+    padding-left: 5px;
     letter-spacing: 3px;
   }
   .strokes {
@@ -141,7 +129,8 @@
 
     .stroke {
       color: rgba(187, 187, 187, 1);
-      font-size: 13px;
+
+      line-height: 10px;
       padding: 20px 0 20px 10px;
       height: 30px;
       border-bottom: 1px solid rgba(241, 241, 241, 1);
