--- a/src/pages/mainPage/main.scss
+++ b/src/pages/mainPage/main.scss
@@ -7,9 +7,10 @@
     display: flex;
     flex-direction: row;
     font-weight: bold;
+    height: 30px;
     .teams-text{
-      font-size: 30px;
-
+    
+      line-height: 30px;
     }
   }
 
@@ -17,7 +18,7 @@
     width: 100%;
     margin-top: 50px;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    
     grid-gap: 30px;
     align-items: baseline;
   }
