--- a/src/index.scss
+++ b/src/index.scss
@@ -6,16 +6,20 @@
 }
 
 @media (min-width: 1200px) {
-  .navItem {
-    font-size: 15px;
-    width: 65%;
-    margin: 10px 0 10px 20px;
+  .navItems {
+    margin-top: 40px;
+    .navItem {
+      font-size: 15px;
+      width: 65%;
+      margin: 10px 0 10px 20px;
+    }
   }
   .teams-text {
     font-size: 30px;
   }
   .teams-container {
     grid-template-columns: 1fr 1fr 1fr;
+    margin-top: 50px;
   }
   .add-employee {
     font-size: 15px;
@@ -33,6 +37,16 @@
   .employee-works-info-container {
     font-size: 15px;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 200px;
+    .info-wrap {
+      &:first-child {
+        border-radius: 30px 0 0 30px;
+      }
+
+      &:last-child {
+        border-radius: 0 30px 30px 0;
+      }
+    }
   }
   .employee-card {
     font-size: 20px;
@@ -47,18 +61,33 @@
       width: 60%;
     }
   }
+  .settings {
+    margin-left: auto;
+    margin-right: 36px;
+  }
+  .add-form {
+    align-items: center;
+    .add-inpt {
+      font-size: 15px;
+      width: 50%;
+    }
+  }
 }
 @media (min-width: 960px) and (max-width: 1200px) {
-  .navItem {
-    font-size: 13px;
-    width: 75%;
-    margin: 10px 0 10px 20px;
+  .navItems {
+    margin-top: 40px;
+    .navItem {
+      font-size: 13px;
+      width: 75%;
+      margin: 10px 0 10px 20px;
+    }
   }
   .teams-text {
     font-size: 25px;
   }
   .teams-container {
     grid-template-columns: 1fr 1fr 1fr;
+    margin-top: 50px;
   }
   .add-employee {
     font-size: 11px;
@@ -74,6 +103,16 @@
   .employee-works-info-container {
     font-size: 15px;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 200px;
+    .info-wrap {
+      &:first-child {
+        border-radius: 30px 0 0 30px;
+      }
+
+      &:last-child {
+        border-radius: 0 30px 30px 0;
+      }
+    }
   }
   .employee-card {
     font-size: 19px;
@@ -88,19 +127,33 @@
       width: 60%;
     }
   }
+  .settings {
+    margin-left: auto;
+    margin-right: 36px;
+  }
+  .add-form {
+    align-items: center;
+    .add-inpt {
+      width: 50%;
+    }
+  }
 }
 
 @media (min-width: 800px) and (max-width: 960px) {
-  .navItem {
-    font-size: 11px;
-    width: 75%;
-    margin: 10px 0 10px 20px;
+  .navItems {
+    margin-top: 40px;
+    .navItem {
+      font-size: 11px;
+      width: 75%;
+      margin: 10px 0 10px 20px;
+    }
   }
   .teams-text {
     font-size: 20px;
   }
   .teams-container {
     grid-template-columns: 1fr 1fr 1fr;
+    margin-top: 50px;
   }
   .add-employee {
     font-size: 9px;
@@ -115,6 +168,16 @@
   .employee-works-info-container {
     font-size: 12px;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 200px;
+    .info-wrap {
+      &:first-child {
+        border-radius: 30px 0 0 30px;
+      }
+
+      &:last-child {
+        border-radius: 0 30px 30px 0;
+      }
+    }
   }
   .employee-card {
     font-size: 18px;
@@ -129,18 +192,32 @@
       width: 60%;
     }
   }
+  .settings {
+    margin-left: auto;
+    margin-right: 36px;
+  }
+  .add-form {
+    .add-inpt {
+      font-size: 13px;
+      width: 60%;
+    }
+  }
 }
 @media (min-width: 600px) and (max-width: 800px) {
-  .navItem {
-    font-size: 10px;
-    width: 75%;
-    margin: 10px 0 10px 10px;
+  .navItems {
+    margin-top: 40px;
+    .navItem {
+      font-size: 10px;
+      width: 75%;
+      margin: 10px 0 10px 10px;
+    }
   }
   .teams-text {
     font-size: 20px;
   }
   .teams-container {
     grid-template-columns: 1fr 1fr;
+    margin-top: 80px;
   }
   .add-employee {
     font-size: 10px;
@@ -160,6 +237,15 @@
   .employee-works-info-container {
     grid-template-columns: 1fr;
     font-size: 15px;
+    .info-wrap {
+      &:first-child {
+        border-radius: 30px 30px 0 0;
+      }
+
+      &:last-child {
+        border-radius: 0 0 30px 30px;
+      }
+    }
   }
   .employee-card {
     font-size: 16px;
@@ -174,18 +260,33 @@
       width: 60%;
     }
   }
+  .add-form {
+    margin-top: 7px;
+    align-items: center;
+    .add-inpt {
+      width: 70%;
+      font-size: 15px;
+    }
+  }
+  .teams-header {
+    flex-direction: column;
+  }
 }
 @media (min-width: 400px) and (max-width: 600px) {
-  .navItem {
-    font-size: 9px;
-    width: 85%;
-    margin: 7px 0;
+  .navItems {
+    margin-top: 10px;
+    .navItem {
+      font-size: 7px;
+      width: 95%;
+      margin: 7px 0;
+    }
   }
   .teams-text {
     font-size: 15px;
   }
   .teams-container {
     grid-template-columns: 1fr;
+    margin-top: 80px;
   }
   .add-employee {
     font-size: 15px;
@@ -205,6 +306,15 @@
   .employee-works-info-container {
     grid-template-columns: 1fr;
     font-size: 14px;
+    .info-wrap {
+      &:first-child {
+        border-radius: 30px 30px 0 0;
+      }
+
+      &:last-child {
+        border-radius: 0 0 30px 30px;
+      }
+    }
   }
   .employee-card {
     font-size: 13px;
@@ -226,6 +336,25 @@
       margin-bottom: 15px;
     }
   }
+  .head {
+    width: 100%;
+
+    align-items: flex-start;
+    flex-direction: column;
+    .settings {
+      margin: auto;
+    }
+  }
+  .add-form {
+    margin-top: 7px;
+    .add-inpt {
+      width: 70%;
+      font-size: 13px;
+    }
+  }
+  .teams-header {
+    flex-direction: column;
+  }
 }
 @media (min-width: 0px) and (max-width: 400px) {
   .employee-info-container {
@@ -233,17 +362,33 @@
     align-items: center;
     justify-content: center;
   }
-  .navItem {
-    font-size: 9px;
-    width: 85%;
-    margin: 7px 0;
+  .navItems {
+    margin-top: 10px;
+    .navItem {
+      font-size: 6px;
+      width: 95%;
+      margin: 7px 0;
+    }
   }
   .teams-text {
     font-size: 13px;
   }
+  .teams-container {
+    grid-template-columns: 1fr;
+    margin-top: 60px;
+  }
   .employee-works-info-container {
     grid-template-columns: 1fr;
     font-size: 9px;
+    .info-wrap {
+      &:first-child {
+        border-radius: 30px 30px 0 0;
+      }
+
+      &:last-child {
+        border-radius: 0 0 30px 30px;
+      }
+    }
   }
   .add-employee {
     font-size: 12px;
@@ -266,5 +411,16 @@
       width: 90%;
       margin-bottom: 10px;
     }
+  }
+  .head {
+    align-items: flex-start;
+    flex-direction: column;
+    .settings {
+      margin: auto;
+    }
+  }
+
+  .teams-header {
+    flex-direction: column;
   }
 }
