--- a/src/components/employee/employee.scss
+++ b/src/components/employee/employee.scss
@@ -1,7 +1,7 @@
 .employee-container {
   width: 90%;
   background-color: white;
-  height: 35px;
+  min-height: 35px;
   border-radius: 5px;
   margin: 10px 0;
   box-shadow: 2px 2px 3px 0px rgba(26, 26, 50, 0.1);
