--- a/src/components/team/team.scss
+++ b/src/components/team/team.scss
@@ -52,16 +52,20 @@
     align-items: center;
     height: 30px;
     width: 80%;
-    box-shadow: 2px 2px 3px 0px rgb(26 26 50 / 10%);
+    box-shadow: 6px 4px 9px 0px rgb(176, 185, 142);
     background-color: #fafafa;
+
     .add-employee-text {
       width: 90%;
-
       height: 30px;
       background-color: #fafafa;
       border-radius: 5px;
       padding-left: 5px;
       font-size: 10px;
+      transition: all 1s;
+      &:focus {
+        font-size: 13px;
+      }
     }
     .teams-add {
       font-size: 20px;
